Social badge examples shown with social style

--- a/try.html
+++ b/try.html
@@ -463,20 +463,20 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 <h3 id="social"> Social </h3>
 <table class='badge'><tbody>
   <tr><th> GitHub forks: </th>
-  <td><img src='/github/forks/badges/shields.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/forks/badges/shields.svg</code></td>
+  <td><img src='/github/forks/badges/shields.svg?style=social' alt=''/></td>
+  <td><code>https://img.shields.io/github/forks/badges/shields.svg?style=social</code></td>
   </tr>
   <tr><th> GitHub stars: </th>
-  <td><img src='/github/stars/badges/shields.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/stars/badges/shields.svg</code></td>
+  <td><img src='/github/stars/badges/shields.svg?style=social' alt=''/></td>
+  <td><code>https://img.shields.io/github/stars/badges/shields.svg?style=social</code></td>
   </tr>
   <tr><th> GitHub followers: </th>
-  <td><img src='/github/followers/espadrine.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/followers/espadrine.svg</code></td>
+  <td><img src='/github/followers/espadrine.svg?style=social' alt=''/></td>
+  <td><code>https://img.shields.io/github/followers/espadrine.svg?style=social</code></td>
   </tr>
   <tr><th> Twitter: </th>
-  <td><img src='/twitter/url/https/shields.io.svg' alt=''/></td>
-  <td><code>https://img.shields.io/twitter/url/https/shields.io.svg</code></td>
+  <td><img src='/twitter/url/https/shields.io.svg?style=social' alt=''/></td>
+  <td><code>https://img.shields.io/twitter/url/https/shields.io.svg?style=social</code></td>
   </tr>
 </tbody></table>
 
