--- a/try.html
+++ b/try.html
@@ -734,6 +734,10 @@ The following styles are available (flat is the default as of Feb 1st 2015):
   <td><img src='/badge/style-flat--squared-green.svg?style=flat-square' alt=''/></td>
   <td><code>https://img.shields.io/badge/style-flat--squared-green.svg?style=flat-square</code></td>
   </tr>
+  <tr>
+  <td><img src='/badge/style-social-green.svg?style=social' alt=''/></td>
+  <td><code>https://img.shields.io/badge/style-social-green.svg?style=social</code></td>
+  </tr>
 </tbody></table>
 
 <p>
