GitHub watch integration
Fixes #508

--- a/try.html
+++ b/try.html
@@ -467,16 +467,20 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 <h3 id="social"> Social </h3>
 <table class='badge'><tbody>
   <tr><th> GitHub forks: </th>
-  <td><img src='/github/forks/badges/shields.svg?style=social' alt=''/></td>
-  <td><code>https://img.shields.io/github/forks/badges/shields.svg?style=social</code></td>
+  <td><img src='/github/forks/badges/shields.svg?style=social&label=Fork' alt=''/></td>
+  <td><code>https://img.shields.io/github/forks/badges/shields.svg?style=social&amp;label=Fork</code></td>
   </tr>
   <tr><th> GitHub stars: </th>
-  <td><img src='/github/stars/badges/shields.svg?style=social' alt=''/></td>
-  <td><code>https://img.shields.io/github/stars/badges/shields.svg?style=social</code></td>
+  <td><img src='/github/stars/badges/shields.svg?style=social&label=Star' alt=''/></td>
+  <td><code>https://img.shields.io/github/stars/badges/shields.svg?style=social&amp;label=Star</code></td>
+  </tr>
+  <tr><th> GitHub watchers: </th>
+  <td><img src='/github/watchers/badges/shields.svg?style=social&label=Watch' alt=''/></td>
+  <td><code>https://img.shields.io/github/watchers/badges/shields.svg?style=social&amp;label=Watch</code></td>
   </tr>
   <tr><th> GitHub followers: </th>
-  <td><img src='/github/followers/espadrine.svg?style=social' alt=''/></td>
-  <td><code>https://img.shields.io/github/followers/espadrine.svg?style=social</code></td>
+  <td><img src='/github/followers/espadrine.svg?style=social&label=Follow' alt=''/></td>
+  <td><code>https://img.shields.io/github/followers/espadrine.svg?style=social&amp;label=Follow</code></td>
   </tr>
   <tr><th> Twitter: </th>
   <td><img src='/twitter/url/https/shields.io.svg?style=social' alt=''/></td>
