--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
       <td><img src='https://img.shields.io/shippable/54d119db5ab6cc13528ab183/master.svg' alt=''/></td>
       <td><code>https://img.shields.io/shippable/54d119db5ab6cc13528ab183/master.svg</code></td>
   </tr>
+  <tr><th> Snap CI branch: </th>
+      <td><img src='https://img.shields.io/snap-ci/ThoughtWorksStudios/eb_deployer/master.svg' alt=''/></td>
+      <td><code>https://img.shields.io/snap-ci/ThoughtWorksStudios/eb_deployer/master.svg</code></td>
+  </tr>
   <tr><th> Jenkins: </th>
     <td><img src='https://img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
     <td><code>https://img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
@@ -464,16 +468,20 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 <h3 id="social"> Social </h3>
 <table class='badge'><tbody>
   <tr><th> GitHub forks: </th>
-  <td><img src='https://img.shields.io/github/forks/badges/shields.svg?style=social' alt=''/></td>
-  <td><code>https://img.shields.io/github/forks/badges/shields.svg?style=social</code></td>
+  <td><img src='https://img.shields.io/github/forks/badges/shields.svg?style=social&label=Fork' alt=''/></td>
+  <td><code>https://img.shields.io/github/forks/badges/shields.svg?style=social&amp;label=Fork</code></td>
   </tr>
   <tr><th> GitHub stars: </th>
-  <td><img src='https://img.shields.io/github/stars/badges/shields.svg?style=social' alt=''/></td>
-  <td><code>https://img.shields.io/github/stars/badges/shields.svg?style=social</code></td>
+  <td><img src='https://img.shields.io/github/stars/badges/shields.svg?style=social&label=Star' alt=''/></td>
+  <td><code>https://img.shields.io/github/stars/badges/shields.svg?style=social&amp;label=Star</code></td>
+  </tr>
+  <tr><th> GitHub watchers: </th>
+  <td><img src='https://img.shields.io/github/watchers/badges/shields.svg?style=social&label=Watch' alt=''/></td>
+  <td><code>https://img.shields.io/github/watchers/badges/shields.svg?style=social&amp;label=Watch</code></td>
   </tr>
   <tr><th> GitHub followers: </th>
-  <td><img src='https://img.shields.io/github/followers/espadrine.svg?style=social' alt=''/></td>
-  <td><code>https://img.shields.io/github/followers/espadrine.svg?style=social</code></td>
+  <td><img src='https://img.shields.io/github/followers/espadrine.svg?style=social&label=Follow' alt=''/></td>
+  <td><code>https://img.shields.io/github/followers/espadrine.svg?style=social&amp;label=Follow</code></td>
   </tr>
   <tr><th> Twitter: </th>
   <td><img src='https://img.shields.io/twitter/url/https/shields.io.svg?style=social' alt=''/></td>
