Number of GitHub commits since a release
Fix #478

--- a/try.html
+++ b/try.html
@@ -406,6 +406,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/github/release/qubyte/rubidium.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/release/qubyte/rubidium.svg</code></td>
   </tr>
+  <tr><th> GitHub commits: </th>
+  <td><img src='/github/commits-since/SubtitleEdit/subtitleedit/3.4.7.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/commits-since/SubtitleEdit/subtitleedit/3.4.7.svg</code></td>
+  </tr>
   <tr><th> Chef cookbook: </th>
   <td><img src='/cookbook/v/chef-sugar.svg' alt=''/></td>
   <td><code>https://img.shields.io/cookbook/v/chef-sugar.svg</code></td>
