--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/packagist/vpre/symfony/symfony.svg' alt=''/></td>
   <td><code>https://img.shields.io/packagist/vpre/symfony/symfony.svg</code></td>
   </tr>
+  <tr><th> Bintray: </th>
+  <td><img src='https://img.shields.io/bintray/v/asciidoctor/maven/asciidoctorj.svg' alt=''/></td>
+  <td><code>https://img.shields.io/bintray/v/asciidoctor/maven/asciidoctorj.svg</code></td>
+  </tr>
   <tr><th> Clojars: </th>
   <td><img src='https://img.shields.io/clojars/v/prismic.svg' alt=''/></td>
   <td><code>https://img.shields.io/clojars/v/prismic.svg</code></td>
