--- a/try.html
+++ b/try.html
@@ -227,6 +227,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/npm/dm/localeval.svg' alt=''/></td>
   <td><code>https://img.shields.io/npm/dm/localeval.svg</code></td>
   </tr>
+  <tr><th data-keywords='node'> npm: </th>
+  <td><img src='/npm/dt/express.svg' alt=''/></td>
+  <td><code>https://img.shields.io/npm/dt/express.svg</code></td>
+  </tr>
   <tr><th data-keywords='ruby'> Gem: </th>
   <td><img src='/gem/dv/rails/stable.svg' alt=''/></td>
   <td><code>https://img.shields.io/gem/dv/rails/stable.svg</code></td>
