website: indicate that Twitter tracks URLs

--- a/index.html
+++ b/index.html
@@ -487,9 +487,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/github/followers/espadrine.svg?style=social&label=Follow' alt=''/></td>
   <td><code>https://img.shields.io/github/followers/espadrine.svg?style=social&amp;label=Follow</code></td>
   </tr>
-  <tr><th> Twitter: </th>
-  <td><img src='https://img.shields.io/twitter/url/https/shields.io.svg?style=social' alt=''/></td>
-  <td><code>https://img.shields.io/twitter/url/https/shields.io.svg?style=social</code></td>
+  <tr><th> Twitter URL: </th>
+  <td><img src='https://img.shields.io/twitter/url/http/shields.io.svg?style=social' alt=''/></td>
+  <td><code>https://img.shields.io/twitter/url/http/shields.io.svg?style=social</code></td>
   </tr>
 </tbody></table>
 
