website: twitter url

--- a/index.html
+++ b/index.html
@@ -754,12 +754,23 @@ The following styles are available (flat is the default as of Feb 1st 2015):
 </tbody></table>
 
 <p>
-Override the default left-hand-side text with
-<code>?label=wow so healthy</code>.
+Here are a few other parameters you can use:
 </p>
+<table><tbody>
+  <tr><td><code>?label=healthinesses</code></td><td>Override the default
+      left-hand-side text</td>
+  <tr><td><code>?logo=data:image/png;base64,…</code></td>
+    <td>Insert logo image (≥ 14px high)</td></tr>
+  <tr><td><code>?logoWidth=40</code></td>
+    <td>Set the horizontal space to give to the logo</td></tr>
+  <tr><td><code>?link=http://abc.xyz&amp;link=http://shields.io</code></td>
+    <td>Specify what clicking on the left/right of a badge should do (esp. for
+      social badge style)</td></tr>
+</tbody></table>
+
 <p>
-We also support <code>.json</code>, <code>.png</code> and a few others,
-but use them responsibly.
+We support <code>.svg</code>, <code>.json</code>, <code>.png</code> and a few
+others, but use them responsibly.
 </p>
 
 <h2 id="like-this"> Like This? </h2>
