Add myself (and some others) to contributors list

--- a/try.html
+++ b/try.html
@@ -827,6 +827,9 @@ is where the current server got started.
 <a class='photo' href='https://github.com/g105b'>
   <img alt='g105b' src='https://avatars2.githubusercontent.com/u/358014?s=80'>
 </a>
+<a class='photo' href='http://dan.cx/'>
+  <img alt='Daniel15' src='https://www.gravatar.com/avatar/872578c4e56897b913fd03ed88daef51?s=80'>
+</a>
 <br>
 <a class='photo' href='https://github.com/sebmck'>
   <img alt='sebmck' src='https://avatars.githubusercontent.com/u/853712?s=80'>
@@ -861,6 +864,9 @@ is where the current server got started.
 <a class='photo' href='https://github.com/akashivskyy'>
   <img alt='akashivskyy' src='https://avatars.githubusercontent.com/u/565231?s=80'>
 </a>
+<a class='photo' href='https://github.com/jbarrus'>
+  <img alt='akashivskyy' src='https://avatars2.githubusercontent.com/u/1044815?s=80'>
+</a>
 <br>
 <a class='photo' href='https://github.com/rmasters'>
   <img alt='rmasters' src='https://avatars.githubusercontent.com/u/34284?s=80'>
@@ -894,6 +900,9 @@ is where the current server got started.
 </a>
 <a class='photo' href='https://github.com/montanaflynn'>
   <img alt='montanaflynn' src='https://avatars.githubusercontent.com/u/24260?s=80'>
+</a>
+<a class='photo' href='https://github.com/PeterDaveHello'>
+  <img alt='PeterDaveHello' src='https://avatars3.githubusercontent.com/u/3691490?s=80'>
 </a>
 <p><small>:wq</small></p>
 </main>
