--- a/try.html
+++ b/try.html
@@ -685,6 +685,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/docker/pulls/mashape/kong.svg' alt=''/></td>
   <td><code>https://img.shields.io/docker/pulls/mashape/kong.svg</code></td>
   </tr>
+  <tr><th> Ansible Role: </th>
+  <td><img src='/ansible/role/3078.svg' alt=''/></td>
+  <td><code>https://img.shields.io/ansible/role/3078.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2 id="your-badge"> Your Badge </h2>
