--- a/try.html
+++ b/try.html
@@ -522,22 +522,6 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/gemnasium/mathiasbynens/he.svg' alt=''/></td>
     <td><code>https://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
   </tr>
-  <tr><th> David: </th>
-    <td><img src='/david/strongloop/express.svg' alt=''/></td>
-    <td><code>https://img.shields.io/david/strongloop/express.svg</code></td>
-  </tr>
-  <tr><th> David: </th>
-    <td><img src='/david/dev/strongloop/express.svg' alt=''/></td>
-    <td><code>https://img.shields.io/david/dev/strongloop/express.svg</code></td>
-  </tr>
-  <tr><th> David: </th>
-    <td><img src='/david/optional/elnounch/byebye.svg' alt=''/></td>
-    <td><code>https://img.shields.io/david/optional/elnounch/byebye.svg</code></td>
-  </tr>
-  <tr><th> David: </th>
-    <td><img src='/david/peer/webcomponents/generator-element.svg' alt=''/></td>
-    <td><code>https://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
-  </tr>
   <tr><th> Hackage-Deps: </th>
     <td><img src='/hackage-deps/v/lens.svg' alt=''/></td>
     <td><code>https://img.shields.io/hackage-deps/v/lens.svg</code></td>
@@ -610,10 +594,6 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/ctan/l/tex.svg' alt='' /></td>
     <td><code>https://img.shields.io/ctan/l/tex.svg</code></td>
   </tr>
-  <tr><th> CocoaPods: </th>
-    <td><img src='/cocoapods/p/AFNetworking.svg' alt='' /></td>
-    <td><code>https://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
-  </tr>
   <tr><th> Wheelmap: </th>
     <td><img src='/wheelmap/a/2323004600.svg' alt='' /></td>
     <td><code>https://img.shields.io/wheelmap/a/2323004600.svg</code></td>
@@ -685,9 +665,33 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/docker/pulls/mashape/kong.svg' alt=''/></td>
   <td><code>https://img.shields.io/docker/pulls/mashape/kong.svg</code></td>
   </tr>
+</tbody></table>
+
+<h3 id="miscellaneous"> Longer Miscellaneous </h3>
+<table class='badge'><tbody>
+  <tr><th> David: </th>
+    <td><img src='/david/strongloop/express.svg' alt=''/></td>
+    <td><code>https://img.shields.io/david/strongloop/express.svg</code></td>
+  </tr>
+  <tr><th> David: </th>
+    <td><img src='/david/dev/strongloop/express.svg' alt=''/></td>
+    <td><code>https://img.shields.io/david/dev/strongloop/express.svg</code></td>
+  </tr>
+  <tr><th> David: </th>
+    <td><img src='/david/optional/elnounch/byebye.svg' alt=''/></td>
+    <td><code>https://img.shields.io/david/optional/elnounch/byebye.svg</code></td>
+  </tr>
+  <tr><th> David: </th>
+    <td><img src='/david/peer/webcomponents/generator-element.svg' alt=''/></td>
+    <td><code>https://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+    <td><img src='/cocoapods/p/AFNetworking.svg' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
+  </tr>
   <tr><th> Ansible Role: </th>
-  <td><img src='/ansible/role/3078.svg' alt=''/></td>
-  <td><code>https://img.shields.io/ansible/role/3078.svg</code></td>
+    <td><img src='/ansible/role/3078.svg' alt=''/></td>
+    <td><code>https://img.shields.io/ansible/role/3078.svg</code></td>
   </tr>
 </tbody></table>
 
