modify try.html with example

--- a/try.html
+++ b/try.html
@@ -211,6 +211,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 </tbody></table>
 <h3 id="downloads"> Downloads </h3>
 <table class='badge'><tbody>
+  <tr><th data-keywords='github'> Github All Releases: </th>
+  <td><img src='/github/dt/atom/atom.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/dt/atom/atom.svg</code></td>
+  </tr>
   <tr><th data-keywords='github'> Github Releases: </th>
   <td><img src='/github/downloads/atom/atom/latest/total.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/downloads/atom/atom/latest/total.svg</code></td>
