--- a/try.html
+++ b/try.html
@@ -924,6 +924,10 @@ is where the current server got started.
 <a class='photo' href='https://github.com/PeterDaveHello'>
   <img alt='PeterDaveHello' src='https://avatars3.githubusercontent.com/u/3691490?s=80'>
 </a>
+<br>
+<a class='photo' href='https://github.com/sagiegurari'>
+  <img alt='sagiegurari' src='https://avatars.githubusercontent.com/u/8112599?s=80'>
+</a>
 <p><small>:wq</small></p>
 </main>
 
