--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 <h3 id="downloads"> Downloads </h3>
 <table class='badge'><tbody>
   <tr><th data-keywords='github'> Github All Releases: </th>
-  <td><img src='https://img.shields.io/github/dt/atom/atom.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/dt/atom/atom.svg</code></td>
+  <td><img src='https://img.shields.io/github/downloads/atom/atom.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/downloads/atom/atom.svg</code></td>
   </tr>
   <tr><th data-keywords='github'> Github Releases: </th>
   <td><img src='https://img.shields.io/github/downloads/atom/atom/latest/total.svg' alt=''/></td>
