total github downloads for all releases + all tags

--- a/try.html
+++ b/try.html
@@ -211,6 +211,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 </tbody></table>
 <h3 id="downloads"> Downloads </h3>
 <table class='badge'><tbody>
+  <tr><th data-keywords='github'> Github All Releases: </th>
+  <td><img src='https://img.shields.io/github/downloads/atom/atom.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/downloads/atom/atom.svg</code></td>
+  </tr>
   <tr><th data-keywords='github'> Github Releases: </th>
   <td><img src='/github/downloads/atom/atom/latest/total.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/downloads/atom/atom/latest/total.svg</code></td>
@@ -919,6 +923,10 @@ is where the current server got started.
 </a>
 <a class='photo' href='https://github.com/PeterDaveHello'>
   <img alt='PeterDaveHello' src='https://avatars3.githubusercontent.com/u/3691490?s=80'>
+</a>
+<br>
+<a class='photo' href='https://github.com/sagiegurari'>
+  <img alt='sagiegurari' src='https://avatars.githubusercontent.com/u/8112599?s=80'>
 </a>
 <p><small>:wq</small></p>
 </main>
