website: switch travis example to rust

--- a/try.html
+++ b/try.html
@@ -65,12 +65,12 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 <h3 id="build"> Build </h3>
 <table class='badge'><tbody>
   <tr><th> Travis: </th>
-    <td><img src='/travis/joyent/node.svg' alt=''/></td>
-    <td><code>https://img.shields.io/travis/joyent/node.svg</code></td>
+    <td><img src='/travis/rust-lang/rust.svg' alt=''/></td>
+    <td><code>https://img.shields.io/travis/USER/REPO.svg</code></td>
   </tr>
   <tr><th> Travis branch: </th>
-    <td><img src='/travis/joyent/node/v0.6.svg' alt=''/></td>
-    <td><code>https://img.shields.io/travis/joyent/node/v0.6.svg</code></td>
+    <td><img src='/travis/rust-lang/rust/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/travis/USER/REPO/BRANCH.svg</code></td>
   </tr>
   <tr><th> Wercker: </th>
     <td><img src='/wercker/ci/wercker/docs.svg' alt=''/></td>
