website: travis example change

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 <h3 id="build"> Build </h3>
 <table class='badge'><tbody>
   <tr><th> Travis: </th>
-    <td><img src='https://img.shields.io/travis/joyent/node.svg' alt=''/></td>
-    <td><code>https://img.shields.io/travis/joyent/node.svg</code></td>
+    <td><img src='https://img.shields.io/travis/rust-lang/rust.svg' alt=''/></td>
+    <td><code>https://img.shields.io/travis/USER/REPO.svg</code></td>
   </tr>
   <tr><th> Travis branch: </th>
-    <td><img src='https://img.shields.io/travis/joyent/node/v0.6.svg' alt=''/></td>
-    <td><code>https://img.shields.io/travis/joyent/node/v0.6.svg</code></td>
+    <td><img src='https://img.shields.io/travis/rust-lang/rust/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/travis/USER/REPO/BRANCH.svg</code></td>
   </tr>
   <tr><th> Wercker: </th>
     <td><img src='https://img.shields.io/wercker/ci/wercker/docs.svg' alt=''/></td>
@@ -523,22 +523,6 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/gemnasium/mathiasbynens/he.svg' alt=''/></td>
     <td><code>https://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
   </tr>
-  <tr><th> David: </th>
-    <td><img src='https://img.shields.io/david/strongloop/express.svg' alt=''/></td>
-    <td><code>https://img.shields.io/david/strongloop/express.svg</code></td>
-  </tr>
-  <tr><th> David: </th>
-    <td><img src='https://img.shields.io/david/dev/strongloop/express.svg' alt=''/></td>
-    <td><code>https://img.shields.io/david/dev/strongloop/express.svg</code></td>
-  </tr>
-  <tr><th> David: </th>
-    <td><img src='https://img.shields.io/david/optional/elnounch/byebye.svg' alt=''/></td>
-    <td><code>https://img.shields.io/david/optional/elnounch/byebye.svg</code></td>
-  </tr>
-  <tr><th> David: </th>
-    <td><img src='https://img.shields.io/david/peer/webcomponents/generator-element.svg' alt=''/></td>
-    <td><code>https://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
-  </tr>
   <tr><th> Hackage-Deps: </th>
     <td><img src='https://img.shields.io/hackage-deps/v/lens.svg' alt=''/></td>
     <td><code>https://img.shields.io/hackage-deps/v/lens.svg</code></td>
@@ -611,10 +595,6 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/ctan/l/tex.svg' alt='' /></td>
     <td><code>https://img.shields.io/ctan/l/tex.svg</code></td>
   </tr>
-  <tr><th> CocoaPods: </th>
-    <td><img src='https://img.shields.io/cocoapods/p/AFNetworking.svg' alt='' /></td>
-    <td><code>https://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
-  </tr>
   <tr><th> Wheelmap: </th>
     <td><img src='https://img.shields.io/wheelmap/a/2323004600.svg' alt='' /></td>
     <td><code>https://img.shields.io/wheelmap/a/2323004600.svg</code></td>
@@ -685,6 +665,34 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='docker pulls'> Docker Pulls: </th>
   <td><img src='https://img.shields.io/docker/pulls/mashape/kong.svg' alt=''/></td>
   <td><code>https://img.shields.io/docker/pulls/mashape/kong.svg</code></td>
+  </tr>
+</tbody></table>
+
+<h3 id="miscellaneous"> Longer Miscellaneous </h3>
+<table class='badge'><tbody>
+  <tr><th> David: </th>
+    <td><img src='https://img.shields.io/david/strongloop/express.svg' alt=''/></td>
+    <td><code>https://img.shields.io/david/strongloop/express.svg</code></td>
+  </tr>
+  <tr><th> David: </th>
+    <td><img src='https://img.shields.io/david/dev/strongloop/express.svg' alt=''/></td>
+    <td><code>https://img.shields.io/david/dev/strongloop/express.svg</code></td>
+  </tr>
+  <tr><th> David: </th>
+    <td><img src='https://img.shields.io/david/optional/elnounch/byebye.svg' alt=''/></td>
+    <td><code>https://img.shields.io/david/optional/elnounch/byebye.svg</code></td>
+  </tr>
+  <tr><th> David: </th>
+    <td><img src='https://img.shields.io/david/peer/webcomponents/generator-element.svg' alt=''/></td>
+    <td><code>https://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+    <td><img src='https://img.shields.io/cocoapods/p/AFNetworking.svg' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> Ansible Role: </th>
+    <td><img src='https://img.shields.io/ansible/role/3078.svg' alt=''/></td>
+    <td><code>https://img.shields.io/ansible/role/3078.svg</code></td>
   </tr>
 </tbody></table>
 
