--- a/try.html
+++ b/try.html
@@ -498,6 +498,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/twitter/url/http/shields.io.svg?style=social' alt=''/></td>
   <td><code>https://img.shields.io/twitter/url/http/shields.io.svg?style=social</code></td>
   </tr>
+  <tr><th> Twitter Follow: </th>
+  <td><img src='/twitter/follow/shields_io.svg?style=social' alt=''/></td>
+  <td><code>https://img.shields.io/twitter/follow/shields_io.svg?style=social</code></td>
+  </tr>
+  <tr><th> Twitter Follow (with no count): </th>
+  <td><img src='/twitter/follow/shields_io.svg?style=social&nobubble=true' alt=''/></td>
+  <td><code>https://img.shields.io/twitter/follow/shields_io.svg?style=social&amp;nobubble=true</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Miscellaneous </h3>
