website: fix HHVM branch badge

--- a/try.html
+++ b/try.html
@@ -201,8 +201,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/hhvm/symfony/symfony.svg</code></td>
   </tr>
   <tr><th> HHVM (branch): </th>
-    <td><img src='/hhvm/symfony/symfony/2.4.0.0.svg' alt=''/></td>
-    <td><code>https://img.shields.io/hhvm/symfony/symfony/2.4.0.0.svg</code></td>
+    <td><img src='/hhvm/symfony/symfony/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/hhvm/symfony/symfony/master.svg</code></td>
   </tr>
   <tr><th> SensioLabs Insight: </th>
       <td><img src='/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg' alt=''/></td>
