--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/hhvm/symfony/symfony.svg</code></td>
   </tr>
   <tr><th> HHVM (branch): </th>
-    <td><img src='https://img.shields.io/hhvm/symfony/symfony/2.4.0.0.svg' alt=''/></td>
-    <td><code>https://img.shields.io/hhvm/symfony/symfony/2.4.0.0.svg</code></td>
+    <td><img src='https://img.shields.io/hhvm/symfony/symfony/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/hhvm/symfony/symfony/master.svg</code></td>
   </tr>
   <tr><th> SensioLabs Insight: </th>
       <td><img src='https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg' alt=''/></td>
@@ -689,6 +689,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> CocoaPods: </th>
     <td><img src='https://img.shields.io/cocoapods/p/AFNetworking.svg' alt='' /></td>
     <td><code>https://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+    <td><img src='https://img.shields.io/cocoapods/metrics/doc-percent/AFNetworking.svg' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/metrics/doc-percent/AFNetworking.svg</code></td>
   </tr>
   <tr><th> Ansible Role: </th>
     <td><img src='https://img.shields.io/ansible/role/3078.svg' alt=''/></td>
