--- a/index.html
+++ b/index.html
@@ -670,6 +670,15 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/docker/pulls/mashape/kong.svg' alt=''/></td>
   <td><code>https://img.shields.io/docker/pulls/mashape/kong.svg</code></td>
   </tr>
+  <tr><th data-keywords='imagelayers'> ImageLayers Size: </th>
+  <td><img src='https://img.shields.io/imagelayers/image-size/_/ubuntu/latest.svg' alt=''/></td>
+  <td><code>https://img.shields.io/imagelayers/image-size/_/ubuntu/latest.svg</code></td>
+  </tr>
+  </tr>
+  <tr><th data-keywords='imagelayers'> ImageLayers Layers: </th>
+  <td><img src='https://img.shields.io/imagelayers/layers/_/ubuntu/latest.svg' alt=''/></td>
+  <td><code>https://img.shields.io/imagelayers/layers/_/ubuntu/latest.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
