--- a/try.html
+++ b/try.html
@@ -205,8 +205,12 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/hhvm/symfony/symfony/master.svg</code></td>
   </tr>
   <tr><th> SensioLabs Insight: </th>
-      <td><img src='/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg' alt=''/></td>
-      <td><code>https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg</code></td>
+    <td><img src='/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg</code></td>
+  </tr>
+  <tr><th> Gitter: </th>
+    <td><img src='/gitter/room/nwjs/nw.js.svg' alt=''/></td>
+    <td><code>https://img.shields.io/gitter/room/nwjs/nw.js.svg</code></td>
   </tr>
 </tbody></table>
 <h3 id="downloads"> Downloads </h3>
