Update index page with examples

--- a/index.html
+++ b/index.html
@@ -711,6 +711,15 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/ansible/role/3078.svg' alt=''/></td>
     <td><code>https://img.shields.io/ansible/role/3078.svg</code></td>
   </tr>
+  <tr><th> Libraries.io for releases: </th>
+    <td><img src='https://img.shields.io/librariesio/release/hex/phoenix/1.0.3.svg' alt=''/></td>
+    <td><code>https://img.shields.io/librariesio/release/hex/phoenix/1.0.3.svg</code></td>
+  <tr><th> Libraries.io for GitHub: </th>
+    <td><img src='https://img.shields.io/librariesio/github/phoenixframework/phoenix.svg' alt=''/></td>
+    <td><code>https://img.shields.io/librariesio/github/phoenixframework/phoenix.svg</code></td>
+
+  </tr>
+
 </tbody></table>
 
 <h2 id="your-badge"> Your Badge </h2>
