website: sensiolabs, gitter

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/hhvm/symfony/symfony/master.svg</code></td>
   </tr>
   <tr><th> SensioLabs Insight: </th>
-      <td><img src='https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg' alt=''/></td>
-      <td><code>https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg</code></td>
+    <td><img src='https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg</code></td>
   </tr>
 </tbody></table>
 <h3 id="downloads"> Downloads </h3>
@@ -604,80 +604,84 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/wheelmap/a/2323004600.svg</code></td>
   </tr>
   <tr><th> GitHub issues: </th>
-  <td><img src='https://img.shields.io/github/issues/badges/shields.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/issues/badges/shields.svg</code></td>
+    <td><img src='https://img.shields.io/github/issues/badges/shields.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues/badges/shields.svg</code></td>
   </tr>
   <tr><th data-keywords='GitHub'></th>
-  <td><img src='https://img.shields.io/github/issues-raw/badges/shields.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
+    <td><img src='https://img.shields.io/github/issues-raw/badges/shields.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
   </tr>
   <tr><th data-keywords='github license'> GitHub license: </th>
-  <td><img src='https://img.shields.io/github/license/mashape/apistatus.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/license/mashape/apistatus.svg</code></td>
+    <td><img src='https://img.shields.io/github/license/mashape/apistatus.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/license/mashape/apistatus.svg</code></td>
   </tr>
   <tr><th> WordPress rating: </th>
-  <td><img src='https://img.shields.io/wordpress/plugin/r/akismet.svg' alt=''/></td>
-  <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
+    <td><img src='https://img.shields.io/wordpress/plugin/r/akismet.svg' alt=''/></td>
+    <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
   </tr>
   <tr><th> Codacy: </th>
-  <td><img src='https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg' alt=''/></td>
-  <td><code>https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg</code></td>
+    <td><img src='https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg' alt=''/></td>
+    <td><code>https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg</code></td>
   </tr>
   <tr><th> Libscore: </th>
-  <td><img src='https://img.shields.io/libscore/s/jQuery.svg' alt=''/></td>
-  <td><code>https://img.shields.io/libscore/s/jQuery.svg</code></td>
+    <td><img src='https://img.shields.io/libscore/s/jQuery.svg' alt=''/></td>
+    <td><code>https://img.shields.io/libscore/s/jQuery.svg</code></td>
   </tr>
   <tr><th> Talk.ai: </th>
-  <td><img src='https://img.shields.io/talk/t/9c81ff703b.svg' alt=''/></td>
-  <td><code>https://img.shields.io/talk/t/9c81ff703b.svg</code></td>
+    <td><img src='https://img.shields.io/talk/t/9c81ff703b.svg' alt=''/></td>
+    <td><code>https://img.shields.io/talk/t/9c81ff703b.svg</code></td>
   </tr>
   <tr><th> Puppet Forge: </th>
-  <td><img src='https://img.shields.io/puppetforge/e/camptocamp/openssl.svg' alt=''/></td>
-  <td><code>https://img.shields.io/puppetforge/e/camptocamp/openssl.svg</code></td>
+    <td><img src='https://img.shields.io/puppetforge/e/camptocamp/openssl.svg' alt=''/></td>
+    <td><code>https://img.shields.io/puppetforge/e/camptocamp/openssl.svg</code></td>
   </tr>
   <tr><th> Puppet Forge: </th>
-  <td><img src='https://img.shields.io/puppetforge/f/camptocamp/openssl.svg' alt=''/></td>
-  <td><code>https://img.shields.io/puppetforge/f/camptocamp/openssl.svg</code></td>
+    <td><img src='https://img.shields.io/puppetforge/f/camptocamp/openssl.svg' alt=''/></td>
+    <td><code>https://img.shields.io/puppetforge/f/camptocamp/openssl.svg</code></td>
   </tr>
   <tr><th> Puppet Forge: </th>
-  <td><img src='https://img.shields.io/puppetforge/rc/camptocamp.svg' alt=''/></td>
-  <td><code>https://img.shields.io/puppetforge/rc/camptocamp.svg</code></td>
+    <td><img src='https://img.shields.io/puppetforge/rc/camptocamp.svg' alt=''/></td>
+    <td><code>https://img.shields.io/puppetforge/rc/camptocamp.svg</code></td>
   </tr>
   <tr><th> Puppet Forge: </th>
-  <td><img src='https://img.shields.io/puppetforge/mc/camptocamp.svg' alt=''/></td>
-  <td><code>https://img.shields.io/puppetforge/mc/camptocamp.svg</code></td>
-  <tr><th data-keywords='ruby'> Gems: </th>
-  <td><img src='https://img.shields.io/gem/u/raphink.svg' alt=''/></td>
-  <td><code>https://img.shields.io/gem/u/raphink.svg</code></td>
+    <td><img src='https://img.shields.io/puppetforge/mc/camptocamp.svg' alt=''/></td>
+    <td><code>https://img.shields.io/puppetforge/mc/camptocamp.svg</code></td>
   </tr>
   <tr><th data-keywords='ruby'> Gems: </th>
-  <td><img src='https://img.shields.io/gem/rt/puppet.svg' alt=''/></td>
-  <td><code>https://img.shields.io/gem/rt/puppet.svg</code></td>
+    <td><img src='https://img.shields.io/gem/u/raphink.svg' alt=''/></td>
+    <td><code>https://img.shields.io/gem/u/raphink.svg</code></td>
   </tr>
   <tr><th data-keywords='ruby'> Gems: </th>
-  <td><img src='https://img.shields.io/gem/rd/facter.svg' alt=''/></td>
-  <td><code>https://img.shields.io/gem/rd/facter.svg</code></td>
+    <td><img src='https://img.shields.io/gem/rt/puppet.svg' alt=''/></td>
+    <td><code>https://img.shields.io/gem/rt/puppet.svg</code></td>
+  </tr>
+  <tr><th data-keywords='ruby'> Gems: </th>
+    <td><img src='https://img.shields.io/gem/rd/facter.svg' alt=''/></td>
+    <td><code>https://img.shields.io/gem/rd/facter.svg</code></td>
   </tr>
   <tr><th data-keywords='dub'> DUB: </th>
-  <td><img src='https://img.shields.io/dub/l/vibe-d.svg' alt=''/></td>
-  <td><code>https://img.shields.io/dub/l/vibe-d.svg</code></td>
+    <td><img src='https://img.shields.io/dub/l/vibe-d.svg' alt=''/></td>
+    <td><code>https://img.shields.io/dub/l/vibe-d.svg</code></td>
   </tr>
   <tr><th data-keywords='docker stars'> Docker Stars: </th>
-  <td><img src='https://img.shields.io/docker/stars/_/ubuntu.svg' alt=''/></td>
-  <td><code>https://img.shields.io/docker/stars/_/ubuntu.svg</code></td>
+    <td><img src='https://img.shields.io/docker/stars/_/ubuntu.svg' alt=''/></td>
+    <td><code>https://img.shields.io/docker/stars/_/ubuntu.svg</code></td>
   </tr>
   <tr><th data-keywords='docker pulls'> Docker Pulls: </th>
-  <td><img src='https://img.shields.io/docker/pulls/mashape/kong.svg' alt=''/></td>
-  <td><code>https://img.shields.io/docker/pulls/mashape/kong.svg</code></td>
+    <td><img src='https://img.shields.io/docker/pulls/mashape/kong.svg' alt=''/></td>
+    <td><code>https://img.shields.io/docker/pulls/mashape/kong.svg</code></td>
   </tr>
   <tr><th data-keywords='imagelayers'> ImageLayers Size: </th>
-  <td><img src='https://img.shields.io/imagelayers/image-size/_/ubuntu/latest.svg' alt=''/></td>
-  <td><code>https://img.shields.io/imagelayers/image-size/_/ubuntu/latest.svg</code></td>
-  </tr>
+    <td><img src='https://img.shields.io/imagelayers/image-size/_/ubuntu/latest.svg' alt=''/></td>
+    <td><code>https://img.shields.io/imagelayers/image-size/_/ubuntu/latest.svg</code></td>
   </tr>
   <tr><th data-keywords='imagelayers'> ImageLayers Layers: </th>
-  <td><img src='https://img.shields.io/imagelayers/layers/_/ubuntu/latest.svg' alt=''/></td>
-  <td><code>https://img.shields.io/imagelayers/layers/_/ubuntu/latest.svg</code></td>
+    <td><img src='https://img.shields.io/imagelayers/layers/_/ubuntu/latest.svg' alt=''/></td>
+    <td><code>https://img.shields.io/imagelayers/layers/_/ubuntu/latest.svg</code></td>
+  </tr>
+  <tr><th> Gitter: </th>
+    <td><img src='https://img.shields.io/gitter/room/nwjs/nw.js.svg' alt=''/></td>
+    <td><code>https://img.shields.io/gitter/room/nwjs/nw.js.svg</code></td>
   </tr>
 </tbody></table>
 
