New vendor: Magnum CI.

--- a/try.html
+++ b/try.html
@@ -104,6 +104,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1/master.svg</code></td>
   </tr>
+  <tr><th> Magnum CI: </th>
+    <td><img src='/magnumci/96ffb83fa700f069024921b0702e76ff.svg' alt=''/></td>
+    <td><code>https://img.shields.io/magnumci/96ffb83fa700f069024921b0702e76ff.svg</code></td>
+  </tr>
+  <tr><th> Magnum CI: </th>
+    <td><img src='/magnumci/96ffb83fa700f069024921b0702e76ff/new-meta.svg' alt=''/></td>
+    <td><code>https://img.shields.io/magnumci/96ffb83fa700f069024921b0702e76ff/new-meta.svg'</code></td>
+  </tr>
   <tr><th> CircleCI: </th>
       <td><img src='/circleci/project/BrightFlair/PHP.Gt.svg' alt=''/></td>
       <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt.svg</code></td>
