--- a/try.html
+++ b/try.html
@@ -124,6 +124,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
       <td><img src='/circleci/project/BrightFlair/PHP.Gt/master.svg' alt=''/></td>
       <td><code>https://img.shields.io/circleci/token/YOURTOKEN/project/BrightFlair/PHP.Gt/master.svg</code></td>
   </tr>
+  <tr><th> Visual Studio Online: </th>
+      <td><img src='/vso/build/larsbrinkhoff/953a34b9-5966-4923-a48a-c41874cfb5f5/1.svg' alt=''/></td>
+      <td><code>https://img.shields.io/vso/build/larsbrinkhoff/953a34b9-5966-4923-a48a-c41874cfb5f5/1.svg</code></td>
+  </tr>
   <tr><th> Shippable: </th>
       <td><img src='/shippable/54d119db5ab6cc13528ab183.svg' alt=''/></td>
       <td><code>https://img.shields.io/shippable/54d119db5ab6cc13528ab183.svg</code></td>
