Added Package Control to the front page

--- a/try.html
+++ b/try.html
@@ -351,6 +351,22 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/dub/dt/vibe-d/0.7.23.svg' alt=''/></td>
   <td><code>https://img.shields.io/dub/dt/vibe-d/0.7.23.svg</code></td>
   </tr>
+  <tr><th data-keywords='sublime'> Package Control: </th>
+  <td><img src='/packagecontrol/dm/Package%20Control.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dm/Package%20Control.svg</code></td>
+  </tr>
+  <tr><th data-keywords='sublime'> Package Control: </th>
+  <td><img src='/packagecontrol/dw/Package%20Control.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dw/Package%20Control.svg</code></td>
+  </tr>
+  <tr><th data-keywords='sublime'> Package Control: </th>
+  <td><img src='/packagecontrol/dd/Package%20Control.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dd/Package%20Control.svg</code></td>
+  </tr>
+  <tr><th data-keywords='sublime'> Package Control: </th>
+  <td><img src='/packagecontrol/dt/Package%20Control.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dt/Package%20Control.svg</code></td>
+  </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
 <table class='badge'><tbody>
