website: Jenkins, PackageControl

--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/jenkins/t/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
     <td><code>https://img.shields.io/jenkins/t/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
   </tr>
+  <tr><th> Jenkins coverage: </th>
+    <td><img src='https://img.shields.io/jenkins/c/https/jenkins.qa.ubuntu.com/address-book-service-utopic-i386-ci.svg' alt=''/></td>
+    <td><code>https://img.shields.io/jenkins/c/https/jenkins.qa.ubuntu.com/address-book-service-utopic-i386-ci.svg</code></td>
+  </tr>
   <tr><th> Coveralls: </th>
     <td><img src='https://img.shields.io/coveralls/jekyll/jekyll.svg' alt=''/></td>
     <td><code>https://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
@@ -351,6 +355,22 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='dub'> DUB: </th>
   <td><img src='https://img.shields.io/dub/dt/vibe-d/0.7.23.svg' alt=''/></td>
   <td><code>https://img.shields.io/dub/dt/vibe-d/0.7.23.svg</code></td>
+  </tr>
+  <tr><th data-keywords='sublime'> Package Control: </th>
+  <td><img src='https://img.shields.io/packagecontrol/dm/Package%20Control.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dm/Package%20Control.svg</code></td>
+  </tr>
+  <tr><th data-keywords='sublime'> Package Control: </th>
+  <td><img src='https://img.shields.io/packagecontrol/dw/Package%20Control.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dw/Package%20Control.svg</code></td>
+  </tr>
+  <tr><th data-keywords='sublime'> Package Control: </th>
+  <td><img src='https://img.shields.io/packagecontrol/dd/Package%20Control.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dd/Package%20Control.svg</code></td>
+  </tr>
+  <tr><th data-keywords='sublime'> Package Control: </th>
+  <td><img src='https://img.shields.io/packagecontrol/dt/Package%20Control.svg' alt=''/></td>
+  <td><code>https://img.shields.io/packagecontrol/dt/Package%20Control.svg</code></td>
   </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
