Add bitHound integration.

--- a/try.html
+++ b/try.html
@@ -558,6 +558,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/codeclimate/coverage/github/triAGENS/ashikawa-core.svg' alt=''/></td>
     <td><code>https://img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg</code></td>
   </tr>
+  <tr><th> bitHound Code: </th>
+    <td><img src='/bithound/code/github/rexxars/sse-channel.svg' alt=''/></td>
+    <td><code>https://img.shields.io/bithound/code/github/rexxars/sse-channel.svg</code></td>
+  </tr>
   <tr><th> Gemnasium: </th>
     <td><img src='/gemnasium/mathiasbynens/he.svg' alt=''/></td>
     <td><code>https://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
@@ -745,6 +749,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> David: </th>
     <td><img src='/david/peer/webcomponents/generator-element.svg' alt=''/></td>
     <td><code>https://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
+  </tr>
+  <tr><th> bitHound: </th>
+    <td><img src='/bithound/dependencies/github/rexxars/sse-channel.svg' alt=''/></td>
+    <td><code>https://img.shields.io/bithound/dependencies/github/rexxars/sse-channel.svg</code></td>
+  </tr>
+  <tr><th> bitHound: </th>
+    <td><img src='/bithound/devDependencies/github/rexxars/sse-channel.svg' alt=''/></td>
+    <td><code>https://img.shields.io/bithound/devDependencies/github/rexxars/sse-channel.svg</code></td>
   </tr>
   <tr><th> CocoaPods: </th>
     <td><img src='/cocoapods/p/AFNetworking.svg' alt='' /></td>
