Simplify name of bitHound label on examples.

--- a/try.html
+++ b/try.html
@@ -558,7 +558,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/codeclimate/coverage/github/triAGENS/ashikawa-core.svg' alt=''/></td>
     <td><code>https://img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg</code></td>
   </tr>
-  <tr><th> bitHound Code: </th>
+  <tr><th> bitHound: </th>
     <td><img src='/bithound/code/github/rexxars/sse-channel.svg' alt=''/></td>
     <td><code>https://img.shields.io/bithound/code/github/rexxars/sse-channel.svg</code></td>
   </tr>
