--- a/index.html
+++ b/index.html
@@ -647,6 +647,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg' alt=''/></td>
     <td><code>https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg</code></td>
   </tr>
+  <tr><th> Codacy branch: </th>
+    <td><img src='https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686/master.svg</code></td>
+  </tr>
   <tr><th> Libscore: </th>
     <td><img src='https://img.shields.io/libscore/s/jQuery.svg' alt=''/></td>
     <td><code>https://img.shields.io/libscore/s/jQuery.svg</code></td>
