--- a/index.html
+++ b/index.html
@@ -531,9 +531,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 
 <h3 id="miscellaneous"> Miscellaneous </h3>
 <table class='badge'><tbody>
-  <tr><th> Gratipay: </th>
-    <td><img src='https://img.shields.io/gratipay/JSFiddle.svg' alt=''/></td>
-    <td><code>https://img.shields.io/gratipay/JSFiddle.svg</code></td>
+  <tr><th> Gratipay User: </th>
+    <td><img src='https://img.shields.io/gratipay/user/dougwilson.svg' alt=''/></td>
+    <td><code>https://img.shields.io/gratipay/user/dougwilson.svg</code></td>
+  </tr>
+  <tr><th> Gratipay Team: </th>
+    <td><img src='https://img.shields.io/gratipay/team/shields.svg' alt=''/></td>
+    <td><code>https://img.shields.io/gratipay/team/shields.svg</code></td>
   </tr>
   <tr><th> Bountysource: </th>
     <td><img src='https://img.shields.io/bountysource/team/mozilla-core/activity.svg' alt=''/></td>
