--- a/try.html
+++ b/try.html
@@ -44,6 +44,7 @@ hr.spacing { border: 0; display: block; height: 3mm; }
   border-bottom: 15px solid #eaeaff;
 }
 #suggestButton { display: none; }
+table.badge > tbody > tr > th,
 table.badge > tbody > tr > td > img,
 table.badge > tbody > tr > td > code { cursor: pointer; }
 </style>
@@ -1173,10 +1174,12 @@ function markupDialogInit() {
   var trs = document.querySelectorAll('table.badge tr');
   for (var i = 0; i < trs.length; i++) {
     var tr = trs[i];
+    var title = tr.querySelector('th');
     var target = tr.querySelector('img');
     var code = tr.querySelector('code');
     // Markup dialog listener.
     var mdl = makeMarkupDialogListener(tr);
+    if (title != null) { title.addEventListener('click', mdl); }
     if (target != null) { target.addEventListener('click', mdl); }
     if (code != null) { code.addEventListener('click', mdl); }
   }
